--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
 }
 .side-bar {
   background-color: #000;
-  width: 16%;
+  width:30em;
+  margin-right:10em;
   height: 89vh;
 }
 #prm{
@@ -23,7 +24,25 @@ body {
 .nav {
   display: flex;
   flex-direction: column;
-  padding-left: 12%;
+  padding-left:2em;
+}
+#p1{
+  color: #FFF;
+                        font-family: DM Sans;
+                        font-size: 29px;
+                        font-style: normal;
+                        font-weight: 700;
+                        line-height: normal;
+                        letter-spacing: -1.16px;
+}
+#p2{
+  color: #B3B3B3;
+  font-family: DM Sans;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.68px;
 }
 .nav a {
   text-decoration: none;
@@ -54,7 +73,7 @@ body {
   color: #fff;
   font-family: DM Sans;
   font-size: 19px;
-  padding-right:5em;
+  padding-right:14em;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -122,7 +141,7 @@ body {
     line-height: normal;
     justify-content:space-evenly;
     align-items: center;
-    padding-right:5em;
+    padding-right:14.5em;
 }
 .download img{
     padding-right:10px;
@@ -193,8 +212,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-right:60px;
-    padding-left:150px;
+    width:50em;
 }
 
 #pbt{
@@ -228,19 +246,14 @@ body {
   
 
     #group{
-        display: flex;
-        align-items:center;
-        padding-left:40px;
-        max-width:100%;
-        padding-right:2.5em;
+        
+        margin:0;
+        padding:0;
     }
 .main{
     background: linear-gradient(180deg, #222 0%, #1F1F1F 11.64%, #171717 25.66%, #161616 32.94%, #151515 35.98%, #131313 44.89%, #121212 55.22%, #121212 75.34%, #121212 85.45%, rgba(18, 18, 18, 0.00) 100%);
-    width:85%;
-    margin-left:18em;
-
+    margin-left:15em;
     justify-content: space-between;
-    padding-bottom:60em;
     position: fixed;
     padding-top:1em;
     top:0px;
@@ -265,10 +278,11 @@ body {
 .main{
   overflow-y:hidden;
   height:100vh;
+  width:100vw;
   scroll-behavior: auto;
 }
 .main:hover{
-  overflow:auto;
+  overflow:auto;padding:;
 }
 img:hover {
   /* Your hover styles for images */
@@ -277,6 +291,223 @@ img:hover {
 a:hover {
   /* Your hover styles for links */
   color:green;
+}
+.music-player{
+  width:100%;
+  margin:0;
+  padding:0;
+}
+@media screen and (min-width: 768px)
+{
+  .side-bar{
+    width:20em;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    height:94vh;
+    
+  }
+  .links{
+    margin:0;
+    padding-bottom:0em;
+  }
+  .play{
+    margin:0;
+    padding-left:4.2em;
+  }
+  #epi{
+    margin-left:1em;
+  }
+  .main{
+    width:87%;
+    font-size: smaller;
+    overflow-y: auto;
+  }
+  .download{
+    display: flex;
+    color: #fff;
+    font-family: DM Sans;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    justify-content:space-evenly;
+    align-items: center;
+    padding-right:7em;
+    padding-top:3em;
+    padding-left:0;
+    margin:0;
+}
+.download a{
+  color: #fff;
+  text-decoration: none;
+}
+#group{
+  padding-right:2em;
+  padding-top:2em;
+}
+#book{
+  margin:0px;
+  padding:0;
+}
+footer{
+  width:10em;
+}
+}
+@media  screen and (max-width:1440px)
+{
+  .main{
+    margin-left:15em;
+    width:93em;
+    overflow-y: auto;
+  }
+  .side-bar{
+    margin:0px;
+    padding:0;
+    width:12.7em;
+  }
+  .download{
+    margin:0px;
+    padding-left:0em;
+    padding-right:6em;
+    padding-top:2em;
+  }
+  .play a{
+    padding-left:4em;
+    padding-top:1em;
+  }
+  #crt{
+    margin-top:2em;
+  }
+  #ib{
+    padding-top:1em;
+    padding-left:6em;
+    white-space:nowrap;
+  }
+  #ylb{
+    white-space:nowrap;
+  }
+  .links{
+    padding-top:0;
+    margin-top:0;
+  }
+  @media  screen and (max-width:1024px)
+  {
+  .main{
+    margin:0;
+    width:61.8em;
+    margin-left:15em;
+  }
+}
+  .links{
+    padding-bottom:0;
+    padding-top:3em;
+  }
+  #group{
+    margin:0;
+    padding-top:1.5em;
+    padding-left:0.5em;
+  }
+  .shows{
+    padding-right:0;
+  }
+  .play{
+    padding:0 6em 0 0em;
+    margin:0;
+    align-items: center;
+  }
+  #plus{
+    margin-right:1em;
+  }
+  #like{
+    margin-right:1em;
+  }
+  #epi{
+    margin-left:0;
+    margin-right:0.5em;
+  }
+  .progress{
+    width:16em;
+  }
+  #run{
+    padding-left:2em;
+  }
+  #dur{
+    padding:0;
+  }
+}
+@media  screen and (max-width:2560px)
+{
+  .main{
+   margin-left:23em;
+   width:123em;
+
+  }
+  .welcome{
+    padding-left:10em;
+    font-size:1em;
+  }
+  .shows{
+    padding-left:12em;
+    padding-right:
+  }
+  .title{
+    height:3em;
+    font-size:medium;
+  }
+  .info{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left:14em;
+    padding-right:13em;
+  }
+  .side-bar{
+    width:20em;
+  }
+  .logo{
+    font-size:medium;
+  }
+  .nav a{
+    font-size:20px;
+    padding-bottom:8px;
+  }
+  .nav{
+    
+  }
+  .play{
+    font-size:20px;
+    white-space:nowrap;
+    padding-left:5em;
+  }
+  .play a{
+    padding-bottom:8px;
+  }
+  .links a{
+    font-size:15px;
+    padding-bottom:1.5em;
+  }
+  #ylb{
+    padding-top:6px;
+  }
+  .links{
+    padding-bottom:8px;
+  }
+  .download{
+    font-size:medium;
+    white-space:nowrap;
+    
+    padding-right:7em;
+  }
+  .music-player{
+    height:6em;
+    padding-top:0;
+  }
+  #dur{
+    padding-top:1em;
+  }
+  #group{
+    padding-top:2.5em;
+  }
 }
 @media screen and (max-width:480px)
 {
@@ -287,6 +518,10 @@ a:hover {
     height:4em;
     padding-top:1em;
     display: flex;
+  }
+  .title{
+    display: flex;
+    justify-content: space-between;
   }
   .logo{
     display: none;
@@ -299,6 +534,21 @@ a:hover {
   }
   .download{
     display:none;
+  }
+  .info{
+    display: flex;
+    justify-content: space-between;
+    white-space:nowrap;
+    padding-right:2em;
+    padding-left:0;
+    font-size: smaller;
+  }
+  #p1{
+    font-size:medium;
+    padding-left:1em;
+  }
+  #p2{
+    font-size: medium;
   }
   .main{
     padding:0;
